<project xmlns="https://maven.apache.org/POM/4.0.0"
  xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.jfcbuilder</groupId>
  <artifactId>jfreechart-builder-demo</artifactId>
  <version>1.5.6</version>
  <name>JFreeChartBuilder Demonstration</name>
  <description>A sample application for demonstrating the use of jfreechart-builder</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <licenses>
    <license>
      <!-- For compatibility with JFreeChart -->
      <name>GNU Lesser General Public Licence 2.1</name>
      <url>https://www.gnu.org/licenses/lgpl-2.1.txt</url>
      <distribution>repo, manual</distribution>
    </license>
  </licenses>

  <dependencies>
    <dependency>
      <groupId>com.jfcbuilder</groupId>
      <artifactId>jfreechart-builder</artifactId>
      <version>1.5.6</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <!-- Minimum Java Version -->
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer
                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>com.jfcbuilder.demo.JFreeChartBuilderDemo</Main-Class>
                  </manifestEntries>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>

  </build>

</project>